--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,12 +38,22 @@ file.reference.hibernate-commons-annotations-4.0.5.Final.jar=lib/hibernate-commo
 file.reference.hibernate-core-4.3.8.Final.jar=lib/hibernate-core-4.3.8.Final.jar
 file.reference.hibernate-entitymanager-4.3.8.Final.jar=lib/hibernate-entitymanager-4.3.8.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-validator-5.1.3.Final.jar=lib/hibernate-validator-5.1.3.Final.jar
+file.reference.hibernate-validator-annotation-processor-5.1.3.Final.jar=lib/hibernate-validator-annotation-processor-5.1.3.Final.jar
+file.reference.hibernate-validator-cdi-5.1.3.Final.jar=lib/hibernate-validator-cdi-5.1.3.Final.jar
 file.reference.jandex-1.1.0.Final.jar=lib/jandex-1.1.0.Final.jar
 file.reference.javassist-3.18.1-GA.jar=lib/javassist-3.18.1-GA.jar
+file.reference.javax.el-2.2.4.jar=lib/javax.el-2.2.4.jar
+file.reference.javax.el-api-2.2.4.jar=lib/javax.el-api-2.2.4.jar
 file.reference.jboss-logging-3.1.3.GA.jar=lib/jboss-logging-3.1.3.GA.jar
 file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=lib/jboss-logging-annotations-1.2.0.Beta1.jar
 file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=lib/jboss-transaction-api_1.2_spec-1.0.0.Final.jar
+file.reference.joda-time-2.1.jar=lib/joda-time-2.1.jar
+file.reference.jsoup-1.7.1.jar=lib/jsoup-1.7.1.jar
+file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
+file.reference.paranamer-2.5.5.jar=lib/paranamer-2.5.5.jar
 file.reference.postgresql-9.4-1201.jdbc4.jar=lib/postgresql-9.4-1201.jdbc4.jar
+file.reference.validation-api-1.1.0.Final.jar=lib/validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -60,19 +70,30 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.c3p0-0.9.2.1.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
     ${file.reference.classmate-1.0.0.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.gson-2.2.4.jar}:\
     ${file.reference.hibernate-commons-annotations-4.0.5.Final.jar}:\
     ${file.reference.hibernate-core-4.3.8.Final.jar}:\
     ${file.reference.hibernate-entitymanager-4.3.8.Final.jar}:\
     ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
-    ${file.reference.gson-2.2.4.jar}:\
-    ${file.reference.postgresql-9.4-1201.jdbc4.jar}:\
+    ${file.reference.hibernate-validator-5.1.3.Final.jar}:\
+    ${file.reference.hibernate-validator-annotation-processor-5.1.3.Final.jar}:\
+    ${file.reference.hibernate-validator-cdi-5.1.3.Final.jar}:\
     ${file.reference.jandex-1.1.0.Final.jar}:\
     ${file.reference.javassist-3.18.1-GA.jar}:\
+    ${file.reference.javax.el-2.2.4.jar}:\
+    ${file.reference.javax.el-api-2.2.4.jar}:\
     ${file.reference.jboss-logging-3.1.3.GA.jar}:\
     ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
-    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
+    ${file.reference.joda-time-2.1.jar}:\
+    ${file.reference.jsoup-1.7.1.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.paranamer-2.5.5.jar}:\
+    ${file.reference.postgresql-9.4-1201.jdbc4.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}:\
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
